[package]
name = "imx_imgutils"
description = "A CLI tool to add boot data to image for ALIENTEK Alpha i.MX board."
version = "0.1.0"
authors = ["tfx2001 <2479727366@qq.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tfx2001/imx_imgutils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
